[tool.poetry]
name = "python-practice"
version = "0.1.0"
description = ""
authors = ["Ramsudharsan Manoharan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
requests = "^2.32.3"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
